# NomuraS.github.io

./: .gitignore  README.md  app.py  freeze.py  main.py  pyproject.toml  references.py  update_github.sh
codes/: .env_example  check_spelling.py  replace_sentences.py
docs/: about.html  index.html
docs/ancient/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
docs/contemporary/: 1.html  10.html  11.html  12.html  13.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
docs/east/: 1.html  2.html  3.html  4.html  5.html
docs/en/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
docs/epistemology/: 1.html  2.html
docs/fr/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
docs/lang/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
docs/medieval/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html
docs/mind/: 1.html  10.html  11.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
docs/modern/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  3.html  4.html  5.html  6.html  (+3 more)
templates/: 0.html  README.md  about.html  index.html  layout.html
templates.bk/: 0.html  layout.html
(+684 files in other folders)
